# pw-audioshare

./: Cargo.toml
src/: presets.rs
src/pipewire/: messages.rs  state.rs  thread.rs
src/ui/: window.rs
